fix(docs): remove site width voverflow

--- a/docs/src/App.css
+++ b/docs/src/App.css
@@ -4,7 +4,6 @@
 }
 
 :root {
-  width: 100vw;
   height: 100vh;
 }
 
